# QtUdpMulticastApp

./: .gitignore  CMakeLists.txt  README.md  main.cpp  sceneData.xml  socketcanreader.cpp  socketcanreader.h  udp_test.sh  udpreceiver.cpp  udpreceiver.h  xmlparser.cpp  xmlparser.h
qml/: Main.qml
